--- a/web.html
+++ b/web.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- GALLERY -->
-    <div class="grid grid-cols-1 gap-16 pb-24">
+    <div class="grid grid-cols-1 pb-24 gap-16 lg:gap-24">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
           <div class="content">
             <img
