--- a/graphic.html
+++ b/graphic.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="./global.style.css">
-    <link rel="stylesheet" href="./styles/carousel.style.css">>
+    <link rel="stylesheet" href="./styles/carousel.style.css">
 
     <title>marina tatshani</title>
     <link rel="icon" href="images/sun-icon.png" sizes="32x32" type="image/png" />
